--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="d-flex mt-5 justify-content-center gap-5">
                 <button type="button" class="btn">Login as Admin</button>
 
-                <button href="#" type="button" class="btn">Login as Cashier</button>
+                <button onclick="location.href='./cashier/index.html'" type="button" class="btn">Login as Cashier</button>
             </div>
           </div>
         </div>
